chore(project): integrate Supabase database

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 asgiref==3.9.2
+dj-database-url==3.0.1
 Django==5.2.6
+psycopg2-binary==2.9.10
+python-decouple==3.8
 sqlparse==0.5.3
 tzdata==2025.2
